tests/bad/empty_filter.lens
process when (foo bar) {
    print(e.hi)
}
